# Numerical_integration

./: CMakeLists.txt  README.md  integration_algorithms.cpp  test_integration.cpp
include/: numerical_algorithms.h
libs/: numerical_algorithms.cpp
